RESOLVED FIXED256618
[macOS] `-[WKWebView acceptsFirstMouse:]` deadlocks when launching the GPU process
https://bugs.webkit.org/show_bug.cgi?id=256618
Summary [macOS] `-[WKWebView acceptsFirstMouse:]` deadlocks when launching the GPU pr...
Aditya Keerthi
Reported 2023-05-10 15:42:01 PDT
Attachments
Aditya Keerthi
Comment 1 2023-05-10 16:11:43 PDT
EWS
Comment 2 2023-05-11 16:59:07 PDT
Committed 263992@main (d390171291c8): <https://commits.webkit.org/263992@main> Reviewed commits have been landed. Closing PR #13728 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.